--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "nock": "^12.0.3",
     "prettier": "^2.0.2",
     "ts-node": "^8.8.1",
-    "typescript": "^3.8.3"
+    "typescript": "3.8.3"
   },
   "dependencies": {
     "rpc-request": "^4.0.9",
